--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta content="https://raw.githubusercontent.com/hiddenloveflowercafe/index/main/images/sharingbanner.png" property="og:image"/>
 	<link rel='shortcut icon' type='image/x-icon' href='images/icons/favicon.svg' />
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&family=Princess+Sofia&family=Quattrocento:wght@400;700&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Princess+Sofia&display=swap');
 	</style>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/general.css">
@@ -99,14 +99,14 @@
 				<div class="bestsellers slider-container">
 					<div class="bestsellers-slider owl-carousel">
 						<div class="item">
-							<div href="#" class="item-card">
+							<div data-bs-toggle="modal" data-bs-target="#exampleModal" class="item-card">
 								<img src="images/cards/image-1.png" class="card-image">
 								<h3 class="card-title">3pcs Large Fossilized Dried Flower</h3>
 								<p class="body-text-sm">with premium wrap and accents</p>
 								<p class="price">php 1,100.00</p>
 							</div>
 						</div>
-						<div class="item">
+						<div id="5698" class="item">
 							<div href="#"class="item-card">
 								<img src="images/cards/image-2.png" class="card-image">
 								<h3 class="card-title">3pcs Medium Fossilized Dried Flower</h3>
@@ -114,7 +114,7 @@
 								<p class="price">php 850.00</p>
 							</div>
 						</div>
-						<div class="item">
+						<div id="1847" class="item">
 							<div href="#" class="item-card">
 								<img src="images/cards/image-3.png" class="card-image">
 								<h3 class="card-title">3pcs Small Fossilized Dried Flower</h3>
@@ -122,7 +122,7 @@
 								<p class="price">php 600.00</p>
 							</div>
 						</div>
-						<div class="item">
+						<div id="6735" class="item">
 							<div href="#" class="item-card">
 								<img src="images/cards/image-4.png" class="card-image">
 								<h3 class="card-title">7-8 inches long Mini dried bouquet</h3>
@@ -178,78 +178,78 @@
 						</div>
 					</div>
 					<div class="grid item-container">
-						<a href="#" class="item-card">
+						<div class="item-card">
 							<img src="images/cards/image-1.png" class="card-image">
 							<h3 class="card-title">3pcs Large Fossilized Dried Flower</h3>
 							<p class="body-text-sm">with premium wrap and accents</p>
 							<p class="price">php 1,100.00</p>
 							<div class="light-color" style="display: none;">blue</div>
       						<div class="has-dried-flowers" style="display: none;">true</div>
-						</a>
-						<a href="#"class="item-card">
+						</div>
+						<div class="item-card">
 							<img src="images/cards/image-2.png" class="card-image">
 							<h3 class="card-title">3pcs Medium Fossilized Dried Flower</h3>
 							<p class="body-text-sm">with premium wrap and accents</p>
 							<p class="price">php 850.00</p>
 							<div class="light-color" style="display: none;">pink</div>
       						<div class="has-dried-flowers" style="display: none;">true</div>
-						</a>
-						<a href="#" class="item-card">
+						</div>
+						<div class="item-card">
 							<img src="images/cards/image-3.png" class="card-image">
 							<h3 class="card-title">3pcs Small Fossilized Dried Flower</h3>
 							<p class="body-text-sm">with premium wrap and accents</p>
 							<p class="price">php 600.00</p>
 							<div class="light-color" style="display: none;">white</div>
       						<div class="has-dried-flowers" style="display: none;">true</div>
-						</a>
-						<a href="#" class="item-card">
+						</div>
+						<div class="item-card">
 							<img src="images/cards/image-4.png" class="card-image">
 							<h3 class="card-title">7-8 inches long Mini dried bouquet</h3>
 							<p class="body-text-sm">with wrap</p>
 							<p class="price">php 115.00</p>
 							<div class="light-color" style="display: none;">blue</div>
       						<div class="has-dried-flowers" style="display: none;">true</div>
-						</a>
-						<a href="#" class="item-card">
+						</div>
+						<div class="item-card">
 							<img src="images/cards/image-7.png" class="card-image">
 							<h3 class="card-title">Single small dried long stem flower with wrapr</h3>
 							<p class="body-text-sm">with wrap</p>
 							<p class="price">php 100.00</p>
 							<div class="light-color" style="display: none;">purple</div>
       						<div class="has-dried-flowers" style="display: none;">true</div>
-						</a>
-						<a href="#"class="item-card">
+						</div>
+						<div class="item-card">
 							<img src="images/cards/image-8.png" class="card-image">
 							<h3 class="card-title">3pcs Large Fossilized Dried Flower</h3>
 							<p class="body-text-sm">with premium wrap and accents</p>
 							<p class="price">php 1,100.00</p>
 							<div class="light-color" style="display: none;">red</div>
       						<div class="has-dried-flowers" style="display: none;">true</div>
-						</a>
-						<a href="#" class="item-card">
+						</div>
+						<div class="item-card">
 							<img src="images/cards/image-9.png" class="card-image">
 							<h3 class="card-title">3pcs Medium Fossilized Dried Flower</h3>
 							<p class="body-text-sm">with premium wrap and accents</p>
 							<p class="price">php 850.00</p>
 							<div class="light-color" style="display: none;">pink</div>
       						<div class="has-dried-flowers" style="display: none;">true</div>
-						</a>
-						<a href="#" class="item-card">
+						</div>
+						<div class="item-card">
 							<img src="images/cards/image-10.png" class="card-image">
 							<h3 class="card-title">3pcs Small Fossilized Dried Flower</h3>
 							<p class="body-text-sm">with premium wrap and accents</p>
 							<p class="price">php 600.00</p>
 							<div class="light-color" style="display: none;">pink</div>
       						<div class="has-dried-flowers" style="display: none;">true</div>
-						</a>
-						<a href="#" class="item-card">
+						</div>
+						<div class="item-card">
 							<img src="images/cards/image-11.png" class="card-image">
 							<h3 class="card-title">7-8 inches long Mini dried bouquet</h3>
 							<p class="body-text-sm">with wrap</p>
 							<p class="price">php 115.00</p>
 							<div class="light-color" style="display: none;">green</div>
       						<div class="has-dried-flowers" style="display: none;">true</div>
-						</a>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -330,6 +330,16 @@
 				</div>
 			</section>
 		</main>
+		<!-- Modal -->
+		<div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
+			<div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+				<div class="modal-content">
+					<div class="modal-body">
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
